# UNAS-Pro-fan-control

./: .gitignore  LICENSE.md  README.md  card.yaml  deploy_fan_control.sh  deploy_local.sh  deploy_temp_monitor.sh  drive-temps.sh  fan_control.sh  fan_control_old.sh  fan_control_with_cpu.sh  hacs.json  info.md  pyproject.toml  pytest.ini  start_temp_monitor.sh  temp_monitor.service  temp_monitor.sh
.github/workflows/: validate.yml
custom_components/unas_pro/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  manifest.json  mqtt_client.py  number.py  select.py  sensor.py  ssh_manager.py  strings.json  switch.py
custom_components/unas_pro/scripts/: fan_control.service  fan_control.sh  unas_monitor.py  unas_monitor.service  unas_monitor.sh
custom_components/unas_pro/translations/: en.json
custom_components/unifi_unas/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  manifest.json  mqtt_client.py  number.py  select.py  sensor.py  ssh_manager.py  strings.json
custom_components/unifi_unas/scripts/: fan_control.service  fan_control.sh  unas_monitor.py  unas_monitor.service
custom_components/unifi_unas/translations/: en.json
fan_control/: README.md  fan_control.sh  fan_control_with_cpu.sh
temp_monitoring/: README.md  temp_monitor.sh
tests/: README.md  __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_mqtt_client.py  test_number.py  test_select.py  test_sensor.py  test_ssh_manager.py
unas_monitor/: README.md  deploy_unas_monitor.sh  unas_monitor.sh
